media player maded

--- a/index.html
+++ b/index.html
@@ -279,8 +279,26 @@
             </div>
             
         </div>
-        <div class="curent-song-mediaplayer"></div>
-        <div class="mediaplayer-imp"></div>
+        <div class="curent-song-mediaplayer">
+            <div class="mediaplayer-interaction">
+                <i class="fa-solid fa-shuffle"></i>
+                <i class="fa-solid fa-backward-step"></i>
+                <i class="fa-regular fa-circle-play"></i>
+                <i class="fa-solid fa-forward-step"></i>
+                <i class="fa-solid fa-arrow-rotate-right"></i>
+            </div>
+            <div class="play-bar">
+                <span>0:25</span>
+                <div class="song bar">
+                    <div class="moving-bar">
+                        <i class="fas fa-circle"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="mediaplayer-imp">
+            
+        </div>
     </footer>
 </body>
 </html>
