footer mediaplayer imput done

--- a/index.html
+++ b/index.html
@@ -294,10 +294,20 @@
                         <i class="fas fa-circle"></i>
                     </div>
                 </div>
+                <span>4:35</span>
             </div>
         </div>
         <div class="mediaplayer-imp">
-            
+            <div class="interaction">
+                <i class="fa-solid fa-list"></i>
+                <i class="fa-solid fa-volume-high"></i>
+                <i class="fa-solid fa-display"></i>
+            </div>
+            <div class="volume bar">
+                <div class="moving-bar">
+                    <i class="fas fa-circle"></i>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
