side-nav responsive extrasmall

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div class="top-nav">
             <div class="logo">
                 <img class="main-logo" src="img/logo.svg" alt="logo">
+                <img class="small-logo" src="img/logo-small.svg" alt="logo">
             </div>
             <div class="inside-nav">
                <div class="serch-menu home">
@@ -78,13 +79,13 @@
         <div class="acount-nav">
             <div class="instal-app">
                 <i class="fa-solid fa-circle-arrow-down"></i>
-                <span>instal app</span>
+                <span class="disap">instal app</span>
                 <div class="line"></div>
 
                 <div id="user">
                     <img src="img/profile.svg" alt="">
                 </div>
-                <span class="disap c-point"> John Doe</span>
+                <span class="disap"> John Doe</span>
             </div>
         </div>
     </nav>
