added left border

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             </div>
             <div class="inside-nav">
                <div class="serch-menu">
+                <div class="border-left"></div>
                     <img class="nav-icon" src="img/home.svg" alt="home">
                     <span class="nav-icon-description">Home</span>
             
