added border bottom at li element

--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
         <div class="container">
             <nav class="service-tipe-nav">
                 <ul class="service-list">
-                    <li><a class="h-color" href="#">IN EVIDENZA</a></li>
+                    <li><a class="h-color" href="#">IN EVIDENZA</a>
+                    <div class="border-bottom"></div></li>
 
                     <li><a class="h-color" href="#">PODCAST</a></li>
                     
